--- a/proyecto/.env
+++ b/proyecto/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = 'RUTA CONEXION BASE DE DATOS'
+MONGODB_URI = mongodb+srv://admin:8OYXj9tTEh9KkiQx@grupo5.yeos9.mongodb.net/db_proyecto?retryWrites=true&w=majority&appName=grupo5
